# tinyrenderers

./: CMakeLists.txt  spirv_vars.hpp  tinydx.h  tinyvk.h
hlsl-iovars/: CMakeLists.txt
hlsl-iovars/data/: Ex01.ps.hlsl  Ex01.vs.hlsl  Ex02.ps.hlsl  Ex02.vs.hlsl  Ex03.ps.hlsl  Ex03.vs.hlsl  Ex04.ps.hlsl  Ex04.vs.hlsl  Ex05.ps.hlsl  Ex05.vs.hlsl
hlsl-iovars/src/: Ex01.cpp  Ex02.cpp  Ex03.cpp  Ex04.cpp  Ex05.cpp
samples/: CMakeLists.txt
samples/assets/: append_consume.hlsl  append_consume.spv  skybox_vs.hlsl  skybox_vs.vs.spv  texture.hlsl  texture.ps.spv  texture.vs.spv  working.spv
samples/assets/test/: test.cs.glsl  test.cs.spv  test.ps.glsl  test.vs.glsl  test.vs.spv
samples/src/: 02_Texture.cpp  03_UniformBuffer.cpp  06_AppendConsume.cpp
